--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "login": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login.cy.js'",
     "login-pom": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login-pom.cy.js'",
-    "login-pom-data": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login-pom-data.cy.js'"
+    "login-pom-data": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login-pom-data.cy.js'",
+    "e2e": "npx cypress run --browser chrome --spec 'cypress/e2e/2-e2e/order-single-item.cy.js'",
+    "e2e-multiple": "npx cypress run --browser chrome --spec 'cypress/e2e/2-e2e/order-multiple-item.cy.js'"
   },
   "author": "Herdian Chandra",
   "license": "ISC",
