--- a/.github/workflows/login.yml
+++ b/.github/workflows/login.yml
@@ -1,6 +1,9 @@
 name: Cypress Tests
 
-on: push
+on:
+  push:
+    paths:
+      - "cypress/e2e/1-login/login-pom.cy.js"
 
 jobs:
   cypress-run:
@@ -10,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       # Install npm dependencies, cache them correctly
       # and run all Cypress tests
-      - name: Cypress run
+      - name: test login using pom
         uses: cypress-io/github-action@v6.1.0
         with:
           browser: chrome
