--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "test-all": "npx cypress run --browser chrome --spec 'cypress/e2e/'",
     "login": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login.cy.js'",
     "login-pom": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login-pom.cy.js'",
     "login-pom-data": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login-pom-data.cy.js'",
@@ -13,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "cypress": "^14.3.2"
+    "cypress": "^14.3.2",
+    "cypress-mochawesome-reporter": "^3.8.2"
   }
 }
