--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,8 @@ build/Release
 node_modules/
 jspm_packages/
 reports/
-screenshoots/
+cypress/screenshots/
+cypress/downloads/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
