--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test-all": "npx cypress run --browser chrome --spec 'cypress/e2e/'",
-    "login": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login.cy.js'",
-    "login-pom": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login-pom.cy.js'",
-    "login-pom-data": "npx cypress run --browser chrome --spec 'cypress/e2e/1-login/login-pom-data.cy.js'",
-    "e2e": "npx cypress run --browser chrome --spec 'cypress/e2e/2-e2e/order-single-item.cy.js'",
-    "e2e-multiple": "npx cypress run --browser chrome --spec 'cypress/e2e/2-e2e/order-multiple-item.cy.js'",
+    "test-all": "npx cypress run --browser chrome --spec \"cypress/e2e/\"",
+    "login": "npx cypress run --browser chrome --spec \"cypress/e2e/1-login/login.cy.js\"",
+    "login-pom": "npx cypress run --browser chrome --spec \"cypress/e2e/1-login/login-pom.cy.js\"",
+    "login-pom-data": "npx cypress run --browser chrome --spec \"cypress/e2e/1-login/login-pom-data.cy.js\"",
+    "e2e": "npx cypress run --browser chrome --spec \"cypress/e2e/2-e2e/order-single-item.cy.js\"",
+    "e2e-multiple": "npx cypress run --browser chrome --spec \"cypress/e2e/2-e2e/order-multiple-item.cy.js\"",
     "headed-test": "npx cypress run --headed --browser chrome"
   },
   "author": "Herdian Chandra",
