--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,9 @@ jobs:
 
       - name: Run Cypress Test
         run: ./node_modules/.bin/cypress run
+
+      - name: Upload Cypress Reports
+        uses: actions/upload-artifact@v2
+        with:
+          name: mochawesome-report
+          path: cypress/reports/html
