update version upload artifact

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Run Cypress Test
         run: ./node_modules/.bin/cypress run
 
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Upload Cypress Reports
         uses: actions/upload-artifact@v3
         with:
