--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "test:login": "npx cypress run --browser chrome --spec cypress/e2e/1-login/**/*.cy.js",
     "test:e2e": "npx cypress run --browser chrome --spec cypress/e2e/2-e2e/**/*.cy.js",
     "e2e-single": "npx cypress run --browser chrome --spec cypress/e2e/2-e2e/order-single-item.cy.js",
-    "e2e-multiple": "npx cypress run --browser chrome --spec cypress/e2e/2-e2e/order-multiple-item.cy.js"
+    "e2e-multiple": "npx cypress run --browser chrome --spec cypress/e2e/2-e2e/order-multiple-item.cy.js",
+    "test:bdd": "npx cypress run --browser chrome"
   },
   "author": "Herdian Chandra",
   "license": "ISC",
   "description": "",
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": false,
+    "step_definitions": "cypress/e2e/3-bdd/step_definitions"
+  },
   "devDependencies": {
     "cypress": "^14.3.3",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-mochawesome-reporter": "^3.8.2",
+    "cypress-xpath": "^2.0.1",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^5.0.0",
     "mochawesome-report-generator": "^6.2.0"
